# Open3SDCM

./: .gitignore  .gitmodules  CE_SCHEMA_REVERSE_ENGINEERING_PLAN.md  CMakeLists.txt  CMakePresets.json  COMBINED_CE_SCHEMA_ANALYSIS.md  FIX_XML_NODE_TRAVERSAL.md  README.md  schemaCE_findings.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  lukka_ci_linux.yml  lukka_ci_mac.yml  lukka_ci_win.yml  release.yml
.vibe/: README.md  config.json  instructions.md
.vibe/agents/: crypto-re-expert.agent.md
.vibe/skills/: README.md
.vibe/workflows/: README.md
CLI/: CMakeLists.txt
CLI/src/: main.cpp
Lib/: CMakeLists.txt  ParseDcm.h
Lib/src/: ParseDcm.cpp  ParseDcm.h  definitions.h
TestData/DTS/: scan_040.dcm
TestData/Handle/: HandleAngledLarge.dcm  dcm2stlapp_HandleAngledLarge.stl
TestData/Hole3x5/: Hole 3x5.dcm  dcm2stlapp_Hole 3x5-text.stl  dcm2stlapp_Hole 3x5.stl
TestData/real-world/: scan_012.dcm  scan_039.dcm
TestTools/: CMakeLists.txt
TestTools/src/: DtsBatchTest.cpp  MeshComparator.cpp  MeshComparator.h  RealWorldTest.cpp  main.cpp
